--- a/src/main/webapp/css/Registration.css
+++ b/src/main/webapp/css/Registration.css
@@ -26,8 +26,10 @@ body {
 }
 
 .website-name {
-  font-size: 3.6rem;
-  margin: 0rem 1rem 0rem 2rem;
+  font-size: 3.6rem !important;
+  margin: 0rem 1rem 0rem 2rem !important;
+  text-decoration: none;
+  color: black;
 }
 
 .Workspace {
@@ -91,6 +93,28 @@ body {
   padding: 0rem;
   margin: 0rem;
   font-size: 4rem;
+}
+
+.modules-nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: initial;
+  margin: 1rem;
+  max-width: 130rem;
+  margin: 0rem 15rem 0rem 15rem;
+}
+
+.module {
+  cursor: pointer;
+  text-decoration: none;
+  color: white;
+  font-size: 2.4rem;
+  font-weight: bolder;
+  background-color: #e67e22;
+  border-radius: 1rem;
+  padding: 1rem;
+  margin: 1rem;
 }
 
 .form {
@@ -160,7 +184,6 @@ body {
 .credentials-section {
   max-width: 130rem;
   margin: 0rem 15rem 0rem 15rem;
-  background-color: white;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
