--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -28,8 +28,10 @@ body {
 }
 
 .website-name {
-  font-size: 3.6rem;
-  margin: 0rem 1rem 0rem 2rem;
+  font-size: 3.6rem !important;
+  margin: 0rem 1rem 0rem 2rem !important;
+  text-decoration: none;
+  color: black;
 }
 
 .Workspace {
