--- a/src/main/webapp/css/Hostels/hostelsLoad.css
+++ b/src/main/webapp/css/Hostels/hostelsLoad.css
@@ -227,7 +227,7 @@ body {
 .field-name {
   font-weight: 500;
   padding: 0rem;
-  margin: 0rem;
+  margin: 0rem 1rem;
   text-overflow: ellipsis;
   font-size: 2rem;
 }
