--- a/src/main/webapp/css/Hostels/hostelWorkspace.css
+++ b/src/main/webapp/css/Hostels/hostelWorkspace.css
@@ -267,13 +267,6 @@ body {
   align-items: initial;
 }
 
-.label1 {
-  font-size: 1.4rem;
-  font-weight: bold;
-  cursor: pointer;
-  padding: 1rem;
-}
-
 .text-input {
   font-size: 1.8rem;
   font-weight: bold;
@@ -302,28 +295,6 @@ body {
   align-items: center;
 }
 
-.room-tags {
-  display: flex;
-  flex-direction: row;
-  background-color: white;
-  justify-content: space-around;
-  align-items: center;
-  border-radius: 1rem;
-  cursor: pointer;
-  height: 3rem;
-  margin: 1rem;
-}
-
-.cross-button {
-  font-size: 1.4rem;
-  border: 1rem;
-  background-color: #e67e22;
-  color: black;
-  border-radius: 1rem;
-  cursor: pointer;
-  margin: 1rem;
-}
-
 .room-cards-section,
 .food-cards-section {
   display: grid;
@@ -331,20 +302,6 @@ body {
   grid-gap: 1.5rem;
   justify-content: space-around;
   align-items: flex-start;
-}
-
-.room-card {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  width: 26rem;
-  /* height: 36rem; */
-  /* background-color: white; */
-  border-radius: 1rem;
-  border: solid black;
-  border-width: 0.15rem;
-  padding: 1.5rem;
 }
 
 .card-element {
@@ -375,7 +332,7 @@ body {
 .specializations-tags-section,
 .policies-tags-section,
 .requirements-tags-section,
-.hotspot-tags-section {
+.hotspots-tags-section {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
