--- a/src/main/webapp/css/Hostels/hostelWorkspace.css
+++ b/src/main/webapp/css/Hostels/hostelWorkspace.css
@@ -194,7 +194,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .grid-for-2 div {
