--- a/src/main/webapp/css/Hostels/hostelsLoad.css
+++ b/src/main/webapp/css/Hostels/hostelsLoad.css
@@ -232,7 +232,8 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: initial;
-  margin: 0rem 10% 2rem 10%;
+  padding-bottom: 2rem;
+  margin: 0rem 10% 0rem 10%;
 }
 
 .production {
