--- a/src/main/webapp/css/Login.css
+++ b/src/main/webapp/css/Login.css
@@ -13,7 +13,6 @@ body {
   background-color: #fdf2e9;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   max-width: 100%;
@@ -43,7 +42,7 @@ body {
   padding: 0.5rem 1rem;
 }
 
-.Workspace:hover {
+.Register:hover {
   border-width: 0.15rem;
 }
 
@@ -78,7 +77,7 @@ body {
 }
 .credentials-section {
   max-width: 130rem;
-  margin: 0rem 15rem 0rem 15rem;
+  margin: 0rem 10% 0rem 10%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -134,7 +133,6 @@ body {
   font-size: 1.8rem;
   font-weight: 550;
   cursor: pointer;
-  /* padding: 0rem 0rem 1rem 0rem; */
 }
 
 .text-input {
@@ -154,7 +152,7 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: initial;
-  margin: 0rem 15rem 2rem 15rem;
+  margin: 0rem 10% 2rem 10%;
 }
 
 .production {
