--- a/src/main/webapp/css/Hostels/hostelRegistrationS1.css
+++ b/src/main/webapp/css/Hostels/hostelRegistrationS1.css
@@ -13,7 +13,6 @@ body {
   background-color: #fdf2e9;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   max-width: 100%;
@@ -41,22 +40,19 @@ body {
   border: solid #e67e22;
   border-width: 0.1rem;
   padding: 0.5rem 1rem;
-  /* transition: all 1s; */
 }
 
 .Workspace:hover {
   border-width: 0.15rem;
-  /* box-shadow:inset 0rem 0rem 0rem 10rem #f00; */
 }
 
 .about-section {
-  /* line-height: 1; */
   max-width: 130rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-content: space-between;
   align-items: center;
-  margin: 0rem 15rem 0rem 15rem;
+  margin: 0rem 10% 0rem 10%;
 }
 
 .phrase {
@@ -78,7 +74,7 @@ body {
 
 .illustration-img {
   width: 100%;
-  height: 50rem;
+  height: 100%;
 }
 
 .phrase2 {
@@ -88,7 +84,7 @@ body {
 }
 
 .notes {
-  word-break: break-all;
+  overflow-wrap: break-word;
 }
 
 .color {
@@ -97,12 +93,11 @@ body {
 
 .info-section {
   padding: 2rem 0rem 2rem 0rem;
-  margin: 0rem 15rem 0rem 15rem;
+  margin: 0rem 10% 0rem 10%;
 }
 
 .form-element {
   padding: 1rem;
-  /* height: 6rem; */
   background-color: #eb984e;
   border-radius: 1rem;
   display: flex;
@@ -125,20 +120,16 @@ body {
 
 .landmark-input {
   padding: 1rem 0rem;
-  margin: 0rem 15rem 0rem 15rem;
+  margin: 0rem 10% 0rem 10%;
 }
 
 .container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  flex-direction: row;
   gap: 1rem;
-  justify-content: center;
+  justify-content: flex-start;
   justify-items: baseline;
   align-items: center;
-}
-
-.lan {
-  width: 40rem;
 }
 
 .text-input {
@@ -151,8 +142,6 @@ body {
 
 .next-button {
   width: 10rem;
-  /* color: white; */
-  /* height: 2rem; */
   border-radius: 1rem;
   background-color: #e67e22;
   font-size: 2rem;
@@ -166,7 +155,7 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin: 0rem 15rem 0rem 15rem;
+  margin: 0rem 10% 0rem 10%;
 }
 
 .landmark-section {
@@ -176,7 +165,7 @@ body {
   justify-content: center;
   justify-items: baseline;
   align-items: center;
-  margin: 0rem 15rem 0rem 15rem;
+  margin: 0rem 10% 0rem 10%;
 }
 
 .landmark-credentials {
@@ -207,7 +196,7 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: initial;
-  margin: 0rem 15rem 2rem 15rem;
+  margin: 0rem 10% 2rem 10%;
 }
 
 .production {
