--- a/src/main/webapp/css/Hostels/hostelRegistrationS2.css
+++ b/src/main/webapp/css/Hostels/hostelRegistrationS2.css
@@ -41,22 +41,19 @@ body {
   border: solid #e67e22;
   border-width: 0.1rem;
   padding: 0.5rem 1rem;
-  /* transition: all 1s; */
 }
 
 .Workspace:hover {
   border-width: 0.15rem;
-  /* box-shadow:inset 0rem 0rem 0rem 10rem #f00; */
 }
 
 .about-section {
-  /* line-height: 1; */
   max-width: 130rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-content: space-between;
   align-items: center;
-  margin: 0rem 15rem 0rem 15rem;
+  margin: 0rem 10% 0rem 10%;
 }
 
 .phrase {
@@ -78,7 +75,7 @@ body {
 
 .illustration-img {
   width: 100%;
-  height: 50rem;
+  height: 100%;
 }
 
 .phrase2 {
@@ -92,7 +89,7 @@ body {
 }
 
 .notes {
-  word-break: break-all;
+  overflow-wrap: break-word;
 }
 
 .hide {
@@ -111,25 +108,22 @@ body {
 
 .info-section {
   padding: 2rem 0rem 2rem 0rem;
-  margin: 0rem 15rem 0rem 15rem;
+  margin: 0rem 10% 0rem 10%;
 }
 
 .form {
   padding: 2rem;
   max-width: 130rem;
-  /* background-color: aqua; */
-  margin: 0rem 15rem 0rem 15rem;
+  margin: 0rem 10% 0rem 10%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   justify-content: center;
-  /* justify-items: normal; */
   align-content: center;
   grid-gap: 1rem 1rem;
 }
 
 .form-element {
   padding: 1rem;
-  /* height: 6rem; */
   background-color: #eb984e;
   border-radius: 1rem;
   display: flex;
@@ -148,7 +142,6 @@ body {
   font-size: 1.8rem;
   font-weight: 550;
   cursor: pointer;
-  /* padding: 0rem 0rem 1rem 0rem; */
 }
 
 .text-input {
@@ -175,7 +168,7 @@ body {
 
 .credentials-section {
   max-width: 130rem;
-  margin: 0rem 15rem 0rem 15rem;
+  margin: 0rem 10% 0rem 10%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -207,7 +200,6 @@ body {
 
 .submit-button:hover {
   border-width: 0.15rem;
-  /* box-shadow:inset 0rem 0rem 0rem 10rem #f00; */
 }
 
 .footer-section {
@@ -215,7 +207,7 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: initial;
-  margin: 0rem 15rem 2rem 15rem;
+  margin: 0rem 10% 2rem 10%;
 }
 
 .production {
