--- a/src/main/webapp/css/Hostels/hostelWorkspace.css
+++ b/src/main/webapp/css/Hostels/hostelWorkspace.css
@@ -13,11 +13,10 @@ body {
   background-color: #fdf2e9;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   max-width: 100%;
-  height: 8rem;
+  height: max-content;
 }
 
 .website-name {
@@ -78,7 +77,7 @@ body {
 .view-section,
 .edit-section {
   max-width: 130rem;
-  margin: 0rem 15rem 0rem 15rem;
+  margin: 0rem 10% 0rem 10%;
 }
 
 .color {
@@ -89,7 +88,6 @@ body {
 .hero-section {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  /* flex-direction: row; */
   justify-content: space-between;
   align-items: center;
 }
@@ -162,10 +160,6 @@ body {
   flex-direction: column;
 }
 
-/* .view-room-section {
-  background-color: #fdf2e9;
-} */
-
 .view-tag {
   font-size: 3.2rem;
   font-weight: bold;
@@ -235,6 +229,7 @@ body {
   font-size: 2.4rem;
   font-weight: bold;
   padding: 1rem;
+  cursor: pointer;
 }
 
 .basic-info,
@@ -244,7 +239,6 @@ body {
 .policy-info {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  /* justify-content: space-around; */
   padding: 1rem;
 }
 
@@ -281,6 +275,7 @@ body {
 .room-tags-section {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: initial;
   align-items: center;
 }
@@ -371,8 +366,9 @@ body {
 }
 
 .commit-button {
-  width: auto;
-  height: auto;
+  background-color: #e67e22;
+  color: white;
+  font-size: 2rem;
 }
 
 .footer-section {
@@ -380,7 +376,7 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: initial;
-  margin: 0rem 15rem 2rem 15rem;
+  margin: 0rem 10% 0rem 10%;
 }
 
 .production {
