--- a/src/main/webapp/css/Hostels/hostelsLoad.css
+++ b/src/main/webapp/css/Hostels/hostelsLoad.css
@@ -27,6 +27,12 @@ body {
   color: black;
 }
 
+.no-data {
+  color: #e67e22;
+  font-size: 1.8rem;
+  font-weight: bold;
+}
+
 .count-info {
   font-size: 2.4rem !important;
   margin: 0rem 1rem 0rem 2rem !important;
