Deployment product of version-0.9.4

--- a/src/main/webapp/css/Hostels/hostelInfoMediaQueries.css
+++ b/src/main/webapp/css/Hostels/hostelInfoMediaQueries.css
@@ -247,6 +247,14 @@
     grid-template-columns: 1fr;
   }
 
+  .header {
+    font-size: 1.6rem;
+  }
+
+  .items {
+    font-size: 1.4rem;
+  }
+
   .extra {
     margin-top: 1rem;
   }
