--- a/src/main/webapp/css/Hostels/hostelRegistrationS2.css
+++ b/src/main/webapp/css/Hostels/hostelRegistrationS2.css
@@ -208,6 +208,7 @@ body {
   justify-content: flex-start;
   align-items: initial;
   margin: 0rem 10% 2rem 10%;
+  padding-bottom: 2rem;
 }
 
 .production {
