--- a/src/main/webapp/css/Hostels/hostelWorkspace.css
+++ b/src/main/webapp/css/Hostels/hostelWorkspace.css
@@ -377,6 +377,7 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: initial;
+  padding-bottom: 2rem;
   margin: 0rem 10% 0rem 10%;
 }
 
