--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -175,6 +175,7 @@ body p {
   justify-content: flex-start;
   align-items: initial;
   margin: 0rem 10% 0rem 10%;
+  padding-bottom: 2rem;
 }
 
 .production {
